# GATE.project

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.example.md  README.md  commit_message.txt  example_compiled  gate  test_constraints.notal
adt/: adt_list.c  adt_list.h  adt_stack.c  adt_stack.h
docs/: README.md
examples/: all_features_test.notal  all_features_test.pas  assignment.notal  casting.notal  casting_test.notal  comments.notal  comprehensive_demo.notal  comprehensive_demo.pas  constants.notal  constants_and_input.notal  constraint.notal  depend_on.notal  dynamic_array.notal  dynamic_array_example.notal  enum.notal  error.notal  expressions.notal  function.notal  if_else.notal  input.notal  iterate_stop.notal  iterate_stop_loop.notal  loop_control.notal  no_constraint_test.notal  output.notal  output.pas  procedure.notal  record.notal  record_example.notal  repeat_n_times.notal  repeat_until_loop.notal  simple_constraint_test.notal  simple_enum_example.notal  simple_record_example.notal  static_array.notal  static_array_example.notal  traversal.notal  traversal_loop.notal  variable_declaration.notal  while.notal  (+1 more)
include/: error_handler.hpp  generator.hpp  lexer.hpp  logger.hpp  parser.hpp  symbol_table.hpp  transpiler.h  ui.hpp
include/ast/: ASTPrinter.h  Expression.h  Statement.h
include/core/: ErrorRecovery.h  NotalLexer.h  NotalParser.h  PascalCodeGenerator.h  Token.h
include/diagnostics/: Diagnostic.h  DiagnosticEngine.h
include/gate/ast/: ASTPrinter.h  Expression.h  Statement.h
include/gate/core/: Token.h
include/gate/transpiler/: ErrorRecovery.h  NotalLexer.h  NotalParser.h  PascalCodeGenerator.h  TranspilerEngine.h
include/gate/utils/: ErrorHandler.h  InputValidator.h  SecureFileReader.h
include/notal_transpiler/: ASTPrinter.h  CodeGenerator.h  Lexer.h  Parser.h  Token.h
include/notal_transpiler/AST/: Expr.h  Stmt.h
include/utils/: InputValidator.h  SecureFileReader.h
input/: advanced_features_test.notal  example.notal  example_factorial.notal  list_adt_test.notal  pointers_memory_test.notal  procedure_params_test.notal  test_array_loop.notal  test_expr_dependon.notal  test_repeat_hello.notal
output/: advanced_features_test.c  example.c  example_factorial.c  list_adt_test.c  pointers_memory_test.c  procedure_params_test.c  test_array_loop.c  test_expr_dependon.c  test_repeat_hello.c
src/: ASTPrinter.cpp  CodeGenerator.cpp  Lexer.cpp  Parser.cpp  Token.cpp  error_handler.cpp  generator.cpp  lexer.cpp  logger.cpp  main.cpp  parser.cpp  symbol_table.cpp  ui.cpp
src/ast/: ASTPrinter.cpp
src/cast/: BooleanToChar.casting.txt  BooleanToInteger.casting.txt  CharToBoolean.casting.txt  CharToInteger.casting.txt  CharToReal.casting.txt  IntegerToChar.casting.txt  IntegerToReal.casting.txt  RealToInteger.casting.txt  StringToChar.casting.txt  StringToReal.casting.txt
src/casting/: BooleanToReal.casting.txt  BooleanToString.casting.txt  CharToString.casting.txt  IntegerToBoolean.casting.txt  IntegerToHexString.casting.txt  IntegerToString.casting.txt  RealToBoolean.casting.txt  RealToChar.casting.txt  RealToString.casting.txt  StringHexToInteger.casting.txt  StringToBoolean.casting.txt  StringToInteger.casting.txt  StringToInteger.pas
src/core/: ErrorRecovery.cpp  NotalLexer.cpp  NotalParser.cpp  PascalCodeGenerator.cpp  Token.cpp
src/diagnostics/: DiagnosticEngine.cpp
src/transpiler/: ErrorRecovery.cpp  NotalLexer.cpp  NotalParser.cpp  PascalCodeGenerator.cpp
test/: example.notal
tests/: array_test.cpp  codegen_test.cpp  lexer_new_tokens_test.cpp  lexer_test.cpp  loop_constructs_test.cpp  loop_control_test.cpp  new_features_test.cpp  parser_test.cpp  pointer_test.cpp  procedure_function_test.cpp  test_helpers.cpp  test_helpers.h
tests/components/: ast_printer_test.cpp  diagnostic_engine_test.cpp  error_recovery_test.cpp  input_validator_test.cpp  lexer_new_tokens_test.cpp  lexer_test.cpp  secure_file_reader_test.cpp  token_test.cpp
tests/features/: array_test.cpp  casting_expressions_test.cpp  comments_assignment_test.cpp  conditional_test.cpp  constants_variables_test.cpp  constraint_test.cpp  dynamic_array_test.cpp  enum_dependon_test.cpp  error_handling_test.cpp  input_output_test.cpp  iterate_stop_test.cpp  pointer_test.cpp  traversal_test.cpp  while_repeat_test.cpp
tests/helpers/: test_helpers.cpp  test_helpers.h
tests/unit/: codegen_test.cpp  lexer_new_tokens_test.cpp  lexer_test.cpp  loop_constructs_test.cpp  loop_control_test.cpp  new_features_test.cpp  parser_test.cpp  procedure_function_test.cpp
